toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__tests__ch_function_decoration_referring_to_another_function.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "function setupPipeline(x) {\n    ch.p(create_dockerfile)\n    return x\n}\n"
---
- - InFunction:
      - setupPipeline
      - start: 1
        end: 71
  - FunctionArguments
  - IdentifierReferredTo:
      name: x
      in_scope: false
      exposed: true
- - InFunction:
      - setupPipeline
      - start: 1
        end: 71
  - InCallExpression
  - Attribute: p
  - IdentifierReferredTo:
      name: ch
      in_scope: false
      exposed: true
  - IdentifierReferredTo:
      name: create_dockerfile
      in_scope: false
      exposed: true
- - InFunction:
      - setupPipeline
      - start: 1
        end: 71
  - IdentifierReferredTo:
      name: x
      in_scope: true
      exposed: true
