toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__tests__ch_reference_internal_to_function.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "function evaluate_agent(ev) {\n    ch.set(\"file_path\", ev.file_path)\n    migration_agent()\n}\n"
---
- - InFunction:
      - evaluate_agent
      - start: 1
        end: 92
  - FunctionArguments
  - IdentifierReferredTo:
      name: ev
      in_scope: false
      exposed: true
- - InFunction:
      - evaluate_agent
      - start: 1
        end: 92
  - InCallExpression
  - Attribute: set
  - IdentifierReferredTo:
      name: ch
      in_scope: false
      exposed: true
  - Constant: file_path
  - Attribute: file_path
  - IdentifierReferredTo:
      name: ev
      in_scope: true
      exposed: true
- - InFunction:
      - evaluate_agent
      - start: 1
        end: 92
  - InCallExpression
  - IdentifierReferredTo:
      name: migration_agent
      in_scope: false
      exposed: true
- - InFunction:
      - evaluate_agent
      - start: 1
        end: 92
