toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__tests__function_decorator_ch_annotation.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "function migrationAgent() {\n    ch.register();\n    ch.set(\"bar\", 1);\n}\n"
---
- - InFunction:
      - migrationAgent
      - start: 1
        end: 71
  - Params
- - InFunction:
      - migrationAgent
      - start: 1
        end: 71
  - InCallExpression
  - Attribute: register
  - IdentifierReferredTo:
      - ch
      - false
- - InFunction:
      - migrationAgent
      - start: 1
        end: 71
  - InCallExpression
  - Attribute: set
  - IdentifierReferredTo:
      - ch
      - false
  - Constant: bar
- - InFunction:
      - migrationAgent
      - start: 1
        end: 71
