toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__tests__function_decorator_ch_annotation_with_internal_ch_and_emit.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "function dispatch_agent(ev) {\n    ch.onEvent(\"new_file\")\n    ch.emitAs(\"file_created\")\n    ch.emitAs(\"file_created\", \"multiple\", \"args\")\n    ch.set(\"file_path\", ev.file_path)\n}\n"
---
- - InFunction: dispatch_agent
  - Params
  - IdentifierReferredTo:
      - ev
      - false
- - InFunction: dispatch_agent
  - InCallExpression
  - Attribute: onEvent
  - IdentifierReferredTo:
      - ch
      - false
  - Constant: new_file
- - InFunction: dispatch_agent
  - InCallExpression
  - Attribute: emitAs
  - IdentifierReferredTo:
      - ch
      - false
  - Constant: file_created
- - InFunction: dispatch_agent
  - InCallExpression
  - Attribute: emitAs
  - IdentifierReferredTo:
      - ch
      - false
  - Constant: file_created
  - Constant: multiple
  - Constant: args
- - InFunction: dispatch_agent
  - InCallExpression
  - Attribute: set
  - IdentifierReferredTo:
      - ch
      - false
  - Constant: file_path
  - Attribute: file_path
  - IdentifierReferredTo:
      - ev
      - true
- - InFunction: dispatch_agent
