toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__tests__pipe_function_composition.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "function main() {\n    bar() | foo() | baz()\n}\n"
---
- - InFunction: main
  - Params
- - InFunction: main
  - InCallExpression
  - IdentifierReferredTo:
      - bar
      - false
- - InFunction: main
  - InCallExpression
  - IdentifierReferredTo:
      - foo
      - false
- - InFunction: main
  - InCallExpression
  - IdentifierReferredTo:
      - baz
      - false
- - InFunction: main
