toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__tests__report_generation_with_object_destructuring-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const { a, b } = someObject;\nconst { c: renamed } = anotherObject;\n\nfunction processValues({ x, y }) {\n    return x + y;\n}\n\nconst result = processValues({ x: a, y: b });\n"
---
internal_call_graph: {}
cell_exposed_values:
  a: {}
  b: {}
  renamed: {}
  result: {}
cell_depended_values:
  anotherObject: {}
  someObject: {}
triggerable_functions:
  processValues:
    arguments:
      - x
      - y
    emit_event: []
    trigger_on: []
